    * Added support for sparse LU decompositons (via SuperLU) in Radau5 solver. 
      This is only available with the C version of the Radau5 solver.
    * Changed attribute name Radau5ODE.solver to Radau5ODE.implementation.
      Removed support for Radau5DAE.implementation = 'c'

--- Assimulo-3.2.9 ---
    * Bugfix for C version of Radau5 solver

--- Assimulo-3.2.8 ---
    * Sundials 5.x port
    * Improved asserts in tests
    * Added C version of the Radau5 solver

--- Assimulo-3.2.7 ---
    * Resolved deprecation warnings visible when using numpy 1.20.
    * Resolved deprecation warnings visible when creating an ndarray from ragged nested sequences.

--- Assimulo-3.2.6 --
    * Fixed some tests that were not compatible with Python 3.

--- Assimulo-3.2.5 --
    * Added so that additional Fortran compile flags can be provided
      during setup.
    * Fixed minor issue that caused exceptions during setup when
      Sundials was not found.

--- Assimulo-3.2.4 --
    * Fixed issue with LSODAR (when being extended as a Cython problem)

--- Assimulo-3.2.3 --
    * Improved testing and made sure that event localization works
      even when a user reuses vectors in the problem class.

--- Assimulo-3.2.2 --
    * Fixed a regression with Radau5ODE from 3.2.1.

--- Assimulo-3.2.1 --
    * Improved detection of BLAS
    * Minor performance improvements

--- Assimulo-3.2 ---
    * Added support for Cython user extensions

--- Assimulo-3.1 ---
    * Added support for building Assimulo with Intel and MSVC on Windows (ticket: 434)
    * Added support for Sundials 4.1 (ticket:431)
    * Fixed so that *.pyf files are included in the source distro (ticket:430)
    * Moved ImportError output to stderr instead of stdout (ticket:429)
    * Disabled test dasp3_basic because problem appears to numerically unstable.

--- Assimulo-3.0 ---
    * Changed so that setuptools is used (support creating wheels) 
      (ticket:426)