@@ -1736,12 +1736,22 @@ class Test_Implicit_Radau5:
             nose.tools.assert_true(event_info[1])
     
         exp_mod = Implicit_Problem(f,0.0,0.0)
-        
+        exp_mod.time_events = time_events
+        exp_mod.handle_event = handle_event
+
+        #CVode
+        exp_sim = Radau5DAE(exp_mod)
+        exp_sim.verbosity = 0
+        exp_sim(5.,100)
+
+        nose.tools.assert_equal(nevent, 5)
+
+    @testattr(stddist = True)
     def test_init(self):
         """
         This tests the functionality of Radau5 Implicit Init.
-        #Test both y0 in problem and not.
         """
+        #Test both y0 in problem and not.
 
         sim = Radau5DAE(self.mod)
         
@@ -1754,6 +1764,46 @@ class Test_Implicit_Radau5:
         """
         self.sim.thet = -1
         self.sim.simulate(.5) #Simulate 2 seconds
+        nose.tools.assert_equal(self.sim.statistics["nsteps"], self.sim.statistics["njacs"])
+
+    @testattr(stddist = True)    
+    def test_simulation(self):
+        """
+        Test a simulation of the van der Pol equations (1).
+        """
+        #Simulate
+        self.sim.simulate(2.) #Simulate 2 seconds
+        nose.tools.assert_almost_equal(self.sim.y_sol[-1][0], 1.706272, 3)
+
+        self.sim.reset()
+
+        self.sim.report_continuously = True
+
+        #Simulate
+        self.sim.simulate(2.) #Simulate 2 seconds
+        nose.tools.assert_almost_equal(self.sim.y_sol[-1][0], 1.706166, 3)
+
+        self.sim_t0.simulate(3.)
+        nose.tools.assert_almost_equal(self.sim_t0.t_sol[0], 1.0000000, 4)
+        nose.tools.assert_almost_equal(self.sim_t0.t_sol[-1], 3.0000000, 4)
+        nose.tools.assert_almost_equal(self.sim_t0.y_sol[-1][0], 1.7061680350, 4)
+
+    @testattr(stddist = True)    
+    def test_simulation_ncp(self):
+        """
+        Test a simulation with ncp.
+        """
+        self.sim.report_continuously = True
+
+        self.sim.simulate(1.0, 200) #Simulate 1 second
+        nose.tools.assert_equal(len(self.sim.t_sol), 201)
+
+        self.sim.reset()
+        self.sim.report_continuously = False
+
+        self.sim.simulate(1.0, 200) #Simulate 1 second
+        nose.tools.assert_equal(len(self.sim.t_sol), 201)
+
 
     @testattr(stddist = True)
     def test_maxh(self):
