@@ -8,6 +8,7 @@
       This is only available with the C version of the Radau5 solver.
     * Changed attribute name Radau5ODE.solver to Radau5ODE.implementation.
       Removed support for Radau5DAE.implementation = 'c'
+    * Removed unused functionality from Radau5 C implementation: DAEs, 2nd order eq, banded matrix structures.
 
 --- Assimulo-3.2.9 ---
     * Bugfix for C version of Radau5 solver
